test/files/neg/t5761.check
t5761.scala:4: error: not enough arguments for constructor D: (x: Int)D[Int].
Unspecified value parameter x.
  println(new D[Int]{})   // crash
              ^
t5761.scala:8: error: not enough arguments for constructor D: (x: Int)D[Int].
Unspecified value parameter x.
  println(new D[Int]())   // no crash
          ^
t5761.scala:9: error: not enough arguments for constructor D: (x: Int)D[Int].
Unspecified value parameter x.
  println(new D[Int]{})   // crash
              ^
t5761.scala:13: error: not found: type Tread
  new Tread("sth") { }.run()
      ^
t5761.scala:13: error: value run is not a member of <error>
  new Tread("sth") { }.run()
                       ^
5 errors found
